# owls-app

./: README.rst  app.py  pyproject.toml  setup.sh
owls_app/: abstract.txt  app.py  solara.css
